<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_habit"
        android:icon="@drawable/habit"
        android:title="@string/title_habit" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/event"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/profile"
...
