...
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habit_list_item_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/habit_list_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
